--- a/config/GritLM-7B_fsdp.yml
+++ b/config/GritLM-7B_fsdp.yml
@@ -11,12 +11,13 @@ fsdp_config:
   fsdp_sharding_strategy: FULL_SHARD
   fsdp_state_dict_type: FULL_STATE_DICT
   fsdp_sync_module_states: true
-  fsdp_transformer_layer_cls_to_wrap: Qwen2DecoderLayer
+  fsdp_transformer_layer_cls_to_wrap: MistralDecoderLayer
   fsdp_use_orig_params: true
+machine_rank: 0
 main_training_function: main
 mixed_precision: 'bf16'
-num_machines: 1
-num_processes: 2
+num_machines: 4
+num_processes: 8
 rdzv_backend: static
 same_network: true
 tpu_env: []
