--- a/config/Qwen1.5-1.8B_fsdp.yml
+++ b/config/Qwen1.5-1.8B_fsdp.yml
@@ -11,12 +11,11 @@ fsdp_config:
   fsdp_sharding_strategy: FULL_SHARD
   fsdp_state_dict_type: FULL_STATE_DICT
   fsdp_sync_module_states: true
-  fsdp_transformer_layer_cls_to_wrap: MistralDecoderLayer
+  fsdp_transformer_layer_cls_to_wrap: Qwen2DecoderLayer
   fsdp_use_orig_params: true
-machine_rank: 0
 main_training_function: main
 mixed_precision: 'bf16'
-num_machines: 2
+num_machines: 4
 num_processes: 8
 rdzv_backend: static
 same_network: true
